--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -38,7 +38,7 @@
 					<h1 class="ui inverted header">
 					<!-- Ascension | Crossed Banners -->
 					</h1>
-					<div class="ui huge play primary button">Plays<i class="right arrow icon"></i></div>
+					<div class="ui huge play primary button">Play<i class="right arrow icon"></i></div>
 				</div>
 			</div>
 			<div class="ui hidden failed negative message">
