--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -19,42 +19,42 @@
 </p></div>
 
 <!-- Sidebar Menu -->
-<div class="ui inverted vertical sidebar menu">
-  <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-  <a href="http://ascension.hype.hk" class="item">Rules</a>
-  <a class="item disabled">Leaderboard</a>
-</div>
-
-
-<!-- Page Contents -->
-  <div class="ui vertical masthead center aligned segment">
-
-    <div class="ui container">
-      <div class="ui large secondary pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-        <a href="http://ascension.hype.hk" class="item">Rules</a>
-        <a class="item disabled">Leaderboard</a>
+    <div class="ui inverted vertical sidebar menu">
+      <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+      <a href="http://ascension.hype.hk" class="item">Rules</a>
+      <a class="item disabled">Leaderboard</a>
+    </div>
+    <!-- Page Contents -->
+    <div class="pusher">
+      <div class="ui vertical masthead center aligned segment">
+        <div class="ui container">
+          <div class="ui large secondary pointing menu">
+            <a class="toc item">
+              <i class="sidebar icon"></i>
+            </a>
+            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="http://ascension.hype.hk" class="item">Rules</a>
+            <a class="item disabled">Leaderboard</a>
+          </div>
+        </div>
       </div>
+
+      <div class="ui text container">
+        <form class="ui form">
+            <div class="ui">
+                <h2 style="text-align: center;">EPISODE VOTING</h2>
+            </div>
+        <h4 class="ui horizontal divider header">
+          <i class="bar university icon"></i>
+          6x01 ~ The Red Women
+        </h4>
+        <h2 class="ui horizontal divider header">
+              <i class="bar trophy icon"></i>
+              Waiting for all Players to Join the League.
+        </h2>
+
     </div>
 
-  </div>
-
-<div class="ui text container">
-    <form class="ui form">
-        <div class="ui">
-            <h2 style="text-align: center;">EPISODE VOTING</h2>
-        </div>
-    <h4 class="ui horizontal divider header">
-      <i class="bar university icon"></i>
-      6x01 ~ The Red Women
-    </h4>
-    <h2 class="ui horizontal divider header">
-          <i class="bar trophy icon"></i>
-          Waiting for all Players to Join the League.
-    </h2>
       <!-- <h4 class="ui horizontal divider header">
           <i class="bar diamond icon"></i>
           Missions
@@ -160,10 +160,6 @@
     <br> -->
 
 </div>
-
-
-
-
 
 
 <script src="semantic/dist/semantic.min.js"></script>
