--- a/S06/code/signup.html
+++ b/S06/code/signup.html
@@ -14,28 +14,25 @@
 <body class="pushable">
 
 <!-- Sidebar Menu -->
-<div class="ui inverted vertical sidebar menu">
-  <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-  <a href="http://ascension.hype.hk" class="item">Rules</a>
-  <a class="item disabled">Leaderboard</a>
-</div>
-
-
-<!-- Page Contents -->
-  <div class="ui vertical masthead center aligned segment">
-
-    <div class="ui container">
-      <div class="ui large secondary pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-        <a href="http://ascension.hype.hk" class="item">Rules</a>
-        <a class="item disabled">Leaderboard</a>
-      </div>
+    <div class="ui inverted vertical sidebar menu">
+      <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+      <a href="http://ascension.hype.hk" class="item">Rules</a>
+      <a class="item disabled">Leaderboard</a>
     </div>
-
-  </div>
+    <!-- Page Contents -->
+    <div class="pusher">
+      <div class="ui vertical masthead center aligned segment">
+        <div class="ui container">
+          <div class="ui large secondary pointing menu">
+            <a class="toc item">
+              <i class="sidebar icon"></i>
+            </a>
+            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="http://ascension.hype.hk" class="item">Rules</a>
+            <a class="item disabled">Leaderboard</a>
+          </div>
+        </div>
+      </div>
 
 <div class="ui text container">
     <form onsubmit="return false;" class="ui form huge">
@@ -178,7 +175,7 @@
     <br>
 
 </div>
-
+</div>
 <script src="semantic/dist/semantic.min.js"></script>
 
 <script>
@@ -204,7 +201,6 @@ var is_player = function(authData){
         var fb = authData.facebook;
         if (snapshot.exists()) {
             // get the ref (in this case /users/2) and update its contents
-            console.log("User exists!");
             userData = authData;
             $('form').form('set value', 'name', fb.displayName)
             $('form').form('set value', 'email', fb.email)
