Rules now appear on site

--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -21,7 +21,7 @@
 <!-- Sidebar Menu -->
     <div class="ui inverted vertical sidebar menu">
       <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
-      <a href="http://ascension.hype.hk" class="item">Rules</a>
+      <a href="rules.html" class="item">Rules</a>
       <a class="item disabled">Leaderboard</a>
     </div>
     <!-- Page Contents -->
@@ -33,7 +33,7 @@
               <i class="sidebar icon"></i>
             </a>
             <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
-            <a href="http://ascension.hype.hk" class="item">Rules</a>
+            <a href="rules.html" class="item">Rules</a>
             <a class="item disabled">Leaderboard</a>
           </div>
         </div>
