--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -16,7 +16,7 @@
         <!-- Sidebar Menu -->
         <div class="ui inverted vertical sidebar menu">
             <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
-            <a href="http://ascension.hype.hk" class="item">Rules</a>
+            <a href="rules.html" class="item">Rules</a>
             <a class="item disabled">Leaderboard</a>
         </div>
         <!-- Page Contents -->
@@ -28,7 +28,7 @@
                             <i class="sidebar icon"></i>
                         </a>
                         <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
-                        <a href="http://ascension.hype.hk" class="item">Rules</a>
+                        <a href="rules.html" class="item">Rules</a>
                         <a class="item disabled">Leaderboard</a>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         </div>
                         <div class="row">
                             <div class="center aligned column">
-                                <a href="http://ascension.hype.hk" class="ui huge button">Read the Rules</a>
+                                <a href="rules.html" class="ui huge button">Read the Rules</a>
                             </div>
                         </div>
                     </div>
