--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -18,7 +18,7 @@
         <div class="ui inverted vertical sidebar menu">
             <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
             <a href="rules.html" class="item">Rules</a>
-            <a class="item disabled">Leaderboard</a>
+            <a href="characters.html" class="item">Characters</a>
         </div>
         <!-- Page Contents -->
         <div class="pusher">
@@ -30,7 +30,7 @@
                         </a>
                         <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
                         <a href="rules.html" class="item">Rules</a>
-                        <a class="item disabled">Leaderboard</a>
+                        <a href="characters.html" class="item">Characters</a>
                     </div>
                 </div>
                 <div class="ui text container">
