--- a/S06/code/thanks.html
+++ b/S06/code/thanks.html
@@ -28,7 +28,7 @@
       <div class="ui inverted vertical sidebar menu">
         <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
         <a href="rules.html" class="item">Rules</a>
-        <a class="item disabled">Leaderboard</a>
+        <a href="characters.html" class="item">Characters</a>
       </div>
       <!-- Page Contents -->
       <div class="pusher">
@@ -40,7 +40,7 @@
               </a>
               <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
               <a href="rules.html" class="item">Rules</a>
-              <a class="item disabled">Leaderboard</a>
+              <a href="characters.html" class="item">Characters</a>
             </div>
           </div>
         </div>
