Redirect to in-game Rules

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0019)file:///tmp/27.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <meta http-equiv="refresh" content="0; URL='http://tijptjik.github.io/ascension/S06/code/rules.html'" />
     <link href="./index_files/github-markdown.css" rel="stylesheet">
     <style>
     	@import url('http://fonts.googleapis.com/css?family=Open+Sans');
