--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -688,7 +688,7 @@
           // Push Votes
           var votesListRef = new Firebase("https://ascension.firebaseio.com/votes");
           var newVoteRef = votesListRef.push();
-          newVoteRef.set(voteskey)
+          newVoteRef.set(votes)
           
           var path = newVoteRef.toString();
           var pathelem = path.split('/');
