Running Missions Message

--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -45,6 +45,11 @@
           </div>
         </div>
         <div class="ui text container">
+            <div class="ui">
+              <h2 style="text-align: center;">Running the Missions - Results Coming Soon</h2>
+            </div>
+          </div>
+        <div class="ui text container" style="display: none">
           <form onsubmit="return false;" class="ui form voting">
             <div class="ui">
               <h2 style="text-align: center;">EPISODE VOTING</h2>
