--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -333,7 +333,7 @@
 
             <h3 class="ui top attached inverted red header sub header"><i class="remove user icon"></i> Assassinations</h3>
             <div class="ui attached segment">
-              <div class="ui right floated assassination button">Reset Assassination</div>
+              <div class="ui right floated assassination button">Reset Assassins</div>
               <p>Making attempts to kill or wound another players's Character</p>
               <div class="ui accordion field">
               <div class="title">
