--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -82,11 +82,11 @@
             <h3 class="ui top attached inverted blue header sub header"><i class="newspaper icon"></i>
               Diplomatic Intelligence
             </h3>
-            <div id="diplomacy">
+            <div id="diplomatic">
               <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -98,8 +98,8 @@
             <div id="assassination">
               <div class="ui attached segment">
                   <div class="ui piled segments">
-                    <div class="ui segment">
-                      <p>No news today</p>
+                    <div class="ui center aligned segment">
+                      <p class="nonews">No news today</p>
                     </div> 
                   </div> 
                 </div>
@@ -110,8 +110,8 @@
             <div id="target">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -122,8 +122,8 @@
             <div id="ability">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -135,8 +135,8 @@
             <div id="foiled">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -148,8 +148,8 @@
             <div id="awards">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -160,8 +160,8 @@
             <div id="ranking">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -188,8 +188,8 @@
             <div id="failed">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -201,8 +201,8 @@
             <div id="damage">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -214,8 +214,8 @@
             <div id="death">
             <div class="ui attached segment">
                 <div class="ui piled segments">
-                  <div class="ui segment">
-                    <p>No news today</p>
+                  <div class="ui center aligned segment">
+                    <p class="nonews">No news today</p>
                   </div> 
                 </div> 
               </div>
@@ -295,7 +295,7 @@
         // DISPLAY Player Chronicle Entries
         function msgTemplate(){
           html = ''
-          html += '<div class="ui attached segment"><div class="ui piled segments"><div class="ui segment"><p>'
+          html += '<div class="ui attached segment"><div class="ui piled center aligned segments"><div class="ui center aligned segment"><p class="nonews">'
           html += 'No news today'
           html += '</p></div></div></div>'
           return html
@@ -308,7 +308,7 @@
             $ref.addClass('populated')
           }
           html = ''
-          html += '<div class="ui attached segment"><div class="ui piled segments"><div class="ui segment"><p>'
+          html += '<div class="ui attached segment"><div class="ui piled segments"><div class="ui center aligned segment"><p>'
           html += msg
           html += '</p></div></div></div>'
           $ref.append(html)
