--- a/S06/code/characters.html
+++ b/S06/code/characters.html
@@ -84,9 +84,10 @@
 
     <!-- Sidebar Menu -->
     <div class="ui inverted vertical sidebar menu">
-      <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+      <a href="game.html" class="item">Game</a>
       <a href="rules.html" class="item">Rules</a>
-      <a href="characters.html" class="item">Characters</a>
+      <a href="chronicle.html" class="item">Chronicle</a>
+      <a href="characters.html" class="active item">Characters</a>
     </div>
 
     <!-- Page Contents -->
@@ -97,9 +98,10 @@
             <a class="toc item">
               <i class="sidebar icon"></i>
             </a>
-            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="index.html" class="item">Game</a>
             <a href="rules.html" class="item">Rules</a>
-            <a href="characters.html" class="item">Characters</a>
+            <a href="chronicle.html" class="item">Chronicle</a>
+            <a href="characters.html" class="active item">Characters</a>
           </div>
         </div>
       </div>
