--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -16,6 +16,62 @@
     font-size: 1rem;
     margin-bottom: 32px;
   }
+
+  p {
+    font-size: 1.2em;
+    line-height: 1.6em;
+    color: #555;
+  }
+
+  span.value,
+  span.points,
+  span.episode,
+  span.power,
+  span.house {
+    color: black;
+    font-weight: 500;
+  }
+
+  span.award,
+  span.points {
+    font-size: 1.5em;
+    vertical-align: text-bottom;
+    padding: 0 14px;
+    display: inline-block;
+  }
+
+  span.episode {
+    padding: 0 14px;
+    display: inline-block;
+    font-variant : small-caps;
+    font-style: italic;
+  }
+  
+  span.health,
+  span.award,
+  span.power {
+    font-variant : titling-caps;
+    color: rgba(19, 157, 255, 0.93)!important;
+  }
+
+  span.character,
+  span.house {
+    text-transform: uppercase;
+    padding: 0 8px;
+    display: inline-block;
+  }
+
+  span.pre {
+    display: block;
+    padding-bottom: 12px;
+  }
+
+  span.success {
+    font-weight: bold;
+    color: rgba(35, 224, 22, 0.93)!important
+  }
+
+
   </style>
 
     <div class="ui hidden failed negative message">
@@ -27,8 +83,9 @@
       </div>
       <!-- Sidebar Menu -->
       <div class="ui inverted vertical sidebar menu">
-        <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+        <a href="index.html" class="item">Game</a>
         <a href="rules.html" class="item">Rules</a>
+        <a href="chronicle.html" class="active item">Chronicle</a>   
         <a href="characters.html" class="item">Characters</a>
       </div>
       <!-- Page Contents -->
@@ -39,8 +96,9 @@
               <a class="toc item">
                 <i class="sidebar icon"></i>
               </a>
-              <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+              <a href="game.html" class="item">Game</a>
               <a href="rules.html" class="item">Rules</a>
+              <a href="chronicle.html" class="active item">Chronicle</a>
               <a href="characters.html" class="item">Characters</a>
             </div>
           </div>
@@ -79,13 +137,6 @@
             </h4>
 
             <table id="leaderboard" class="ui very basic celled table left floated">
-              <thead>
-                <tr >
-                  <th>Player Rank</th>
-                </tr>
-              </thead>
-            <tbody>
-            </tbody>
           </table>
 
             <h4 class="ui horizontal divider header">
@@ -266,8 +317,8 @@
             'stark': 'grey'
         }
         
-        // Semantic UI
-
+        // Semantic ui
+        $('.ui.sidebar').sidebar('attach events', '.toc.item');
         $('.ui.accordion').accordion();
 
         // // Update Mission Agents & Available Targets based on League Selection.
@@ -322,8 +373,6 @@
           db.child('player_chronicles').orderByKey()
             .equalTo(playerKey)
             .once('value', function(snapshot){
-              console.log(snapshot.val())
-              console.log(playerKey)
               parsePlayerChronicles(snapshot.val()[playerKey]['entries'])
             })
         }
@@ -366,9 +415,12 @@
 
         // DISPLAY Leaderboard
         
-        var scoretable = []
+        var scoretable;
 
         function genetateLeaderboard(league, episode){
+          scoretable = []
+          var template = '<thead><tr><th>Player Rank</th></tr></thead><tbody></tbody>'
+          $('#leaderboard').empty().html(template) 
           db.child('players').once('value', function(snapshot){
             getLeaderBoard(league+episode, league, episode, snapshot.val())
           });
@@ -378,18 +430,12 @@
 
         // GET Leaderboard
         function parseLeaderBoard(scores, league, episode, players){
-          console.log(scores)
-          console.log(league)
-          console.log(episode)
-          console.log(players)
 
           for (var score in scores['scores']){
             scoretable.push(
                 {'id': score,'player': players[score], 'score' : parseInt(scores['scores'][score]), 'scores' : []}
               )
           }
-          console.log(scoretable);
-
           getEpisodeScores(league, episode);
         }
 
@@ -432,6 +478,8 @@
 
 
         function drawTable(data) {
+
+
             for (var i = 0; i < data.length; i++) {
                 drawRow(data[i], i);
             }
@@ -519,7 +567,6 @@
                     html += str;
                     if (episodes[ep]['current']) {
                         current_episode = episodes[ep]['number'];
-                        console.log(current_episode)
                     }
                 }
             }
