--- a/S06/code/game.html
+++ b/S06/code/game.html
@@ -26,8 +26,9 @@
       </div>
       <!-- Sidebar Menu -->
       <div class="ui inverted vertical sidebar menu">
-        <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+        <a href="index.html" class="active item">Game</a>
         <a href="rules.html" class="item">Rules</a>
+        <a href="chronicle.html" class="item">Chronicle</a>
         <a href="characters.html" class="item">Characters</a>
       </div>
       <!-- Page Contents -->
@@ -38,9 +39,10 @@
               <a class="toc item">
                 <i class="sidebar icon"></i>
               </a>
-              <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+              <a href="index.html" class="active item">Game</a>
               <a href="rules.html" class="item">Rules</a>
-              <a href="characters.html" class="item">Characters</a>
+              <a href="chronicle.html" class="item">Chronicle</a>
+        <a href="characters.html" class="item">Characters</a>
             </div>
           </div>
         </div>
@@ -464,6 +466,8 @@
         }
         
         // Semantic UI
+
+        $('.ui.sidebar').sidebar('attach events', '.toc.item');
 
         $('.ui.accordion').accordion();
 
