--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -16,8 +16,9 @@
     
         <!-- Sidebar Menu -->
         <div class="ui inverted vertical sidebar menu">
-            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="index.html" class="active item">Home</a>
             <a href="rules.html" class="item">Rules</a>
+            <a href="chronicle.html" class="item">Chronicle</a>
             <a href="characters.html" class="item">Characters</a>
         </div>
         <!-- Page Contents -->
@@ -28,8 +29,9 @@
                         <a class="toc item">
                             <i class="sidebar icon"></i>
                         </a>
-                        <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+                        <a href="index.html" class="active item">Home</a>
                         <a href="rules.html" class="item">Rules</a>
+                        <a href="chronicle.html" class="item">Chronicle</a>
                         <a href="characters.html" class="item">Characters</a>
                     </div>
                 </div>
