--- a/S06/code/rules.html
+++ b/S06/code/rules.html
@@ -174,9 +174,10 @@
     <body class="pushable">
         <!-- Sidebar Menu -->
         <div class="ui inverted vertical sidebar menu">
-            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="index.html" class="active item">Game</a>
             <a href="rules.html" class="item">Rules</a>
-            <a href="characters.html" class="item">Characters</a>
+            <a href="chronicle.html" class="item">Chronicle</a>
+<a href="characters.html" class="item">Characters</a>
         </div>
         <!-- Page Contents -->
         <div class="pusher">
@@ -186,9 +187,10 @@
                         <a class="toc item">
                             <i class="sidebar icon"></i>
                         </a>
-                        <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+                        <a href="index.html" class="active item">Game</a>
                         <a href="rules.html" class="item">Rules</a>
-                        <a href="characters.html" class="item">Characters</a>
+                        <a href="chronicle.html" class="item">Chronicle</a>
+<a href="characters.html" class="item">Characters</a>
                     </div>
                 </div>
             </div>
@@ -1263,8 +1265,6 @@
                 </tr>
             </tbody>
         </table>
-        <h2 id="appendix-characters-bios"><a name="user-content-appendix-characters-bios" href="#appendix-characters-bios" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Appendix : Characters Bios</h2>
-        <p>UNDER DEVELOPMENT</p>
     </div>
 </body>
 </html>
