--- a/S06/code/signup.html
+++ b/S06/code/signup.html
@@ -15,8 +15,9 @@
 
 <!-- Sidebar Menu -->
     <div class="ui inverted vertical sidebar menu">
-      <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+      <a href="index.html" class="active item">Home</a>
       <a href="rules.html" class="item">Rules</a>
+      <a href="chronicle.html" class="item">Chronicle</a>
       <a href="characters.html" class="item">Characters</a>
     </div>
     <!-- Page Contents -->
@@ -27,8 +28,9 @@
             <a class="toc item">
               <i class="sidebar icon"></i>
             </a>
-            <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+            <a href="index.html" class="active item">Home</a>
             <a href="rules.html" class="item">Rules</a>
+            <a href="chronicle.html" class="item">Chronicle</a>
             <a href="characters.html" class="item">Characters</a>
           </div>
         </div>
@@ -193,6 +195,10 @@
 <script src="semantic/dist/semantic.min.js"></script>
 
 <script>
+
+// Semantic ui
+$('.ui.sidebar').sidebar('attach events', '.toc.item');
+
 var userData = {};
 var db = new Firebase("https://ascension.firebaseio.com");
 
