--- a/S06/code/thanks.html
+++ b/S06/code/thanks.html
@@ -26,8 +26,9 @@
       </div>
       <!-- Sidebar Menu -->
       <div class="ui inverted vertical sidebar menu">
-        <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+        <a href="game.html" class="active item">Game</a>
         <a href="rules.html" class="item">Rules</a>
+        <a href="chronicle.html" class="item">Chronicle</a>
         <a href="characters.html" class="item">Characters</a>
       </div>
       <!-- Page Contents -->
@@ -38,15 +39,16 @@
               <a class="toc item">
                 <i class="sidebar icon"></i>
               </a>
-              <a href="http://tijptjik.github.io/ascension/S06/code/" class="active item">Home</a>
+              <a href="game.html" class="active item">Game</a>
               <a href="rules.html" class="item">Rules</a>
+              <a href="chronicle.html" class="item">Chronicle</a>
               <a href="characters.html" class="item">Characters</a>
             </div>
           </div>
         </div>
         <div class="ui text container">
             <div class="ui">
-              <h2 style="text-align: center;">Thanks for Voting</h2>
+              <h2 style="text-align: center;">Thanks for Voting. See the previous results in the <a href="chronicle.html" title="">Chronicle</a></h2>
             </div>
           </div>
       </body>
