Hide voterDistribution till episode 4

--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -281,7 +281,7 @@
               <i class="announcement icon"></i>
               Voting Histogram
             </h4>
-            <div id="voterDistribution">
+            <div id="voterDistribution" style="display:none">
               
             </div>
 
