--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -71,6 +71,10 @@
     color: rgba(35, 224, 22, 0.93)!important
   }
 
+  .ui.sortable.table thead th.sorted {
+    background: white;
+  }
+
 
   </style>
 
@@ -136,7 +140,7 @@
               Leaderboard
             </h4>
 
-            <table id="leaderboard" class="ui very basic celled table left floated">
+            <table id="leaderboard" class="ui very basic celled table left floated sortable">
           </table>
 
             <h4 class="ui horizontal divider header">
@@ -291,6 +295,7 @@
 
         <script src="semantic/dist/semantic.min.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="http://semantic-ui.com/javascript/library/tablesort.js"></script>
 
         
         <script>
@@ -482,7 +487,9 @@
             for (var i = 0; i < data.length; i++) {
                 drawRow(data[i], i);
             }
-            $('#leaderboard > thead > tr').append("<th>Total</th>")
+            $('#leaderboard > thead > tr').append("<th class='sorted descending'>Total</th>")
+
+            $('.sortable.table').tablesort();
 
             $('.circular.label')
             .popup({
