--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -648,7 +648,7 @@
 
       function generateVoteDistribution(league, episode){
         // DEVELOPER : TOGGLE BY EPISODE 4
-        // getVoteDistribution(league, episode)
+        getVoteDistribution(league, episode)
       }
 
       // GET Episode Votes
