--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -484,9 +484,8 @@
           getPlayerChronicles(league+house+episode);
           getPublicChronicles(league+episode);
           genetateLeaderboard(league, episode);
-          // # TURN ON FOR EPISODE 4
-          // generateVoteDistribution(league, episode);
-          // getPlayerVotes(league, episode);
+          generateVoteDistribution(league, episode);
+          getPlayerVotes(league, episode);
         }
 
         // DISPLAY Leaderboard
