Hide the Z value on hover

--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -684,6 +684,7 @@
 
       var layout_template = {
           "hovermode": "x",
+          "hoverinfo": "x+y",
           "font": {
               "color": "#444",
               "family": "\"Open sans\", verdana, arial, sans-serif",
