--- a/S06/code/chronicle.html
+++ b/S06/code/chronicle.html
@@ -684,7 +684,7 @@
 
       var layout_template = {
           "hovermode": "x",
-          "hoverinfo": "x+y",
+          "hoverinfo": "x+y+z",
           "font": {
               "color": "#444",
               "family": "\"Open sans\", verdana, arial, sans-serif",
