--- a/S07/rosters.html
+++ b/S07/rosters.html
@@ -1,7 +1,7 @@
 <html><head>
 
 <meta charset="utf-8" />
-<meta property="og:image" content="tijptjik.github.io/ascension/S07/rosters.png">
+<meta property="og:image" content="https://tijptjik.github.io/ascension/S07/rosters.png">
 
 </head>
 
